@@ -155,6 +155,8 @@ sql {
 	#######################################################################
 	# accounting_onoff_query	- query for Accounting On/Off packets 
 	# accounting_update_query	- query for Accounting update packets 
+	# accounting_update_query_alt	- query for Accounting update packets 
+	#                               (alternate in case first query fails)
 	# accounting_start_query	- query for Accounting start packets 
 	# accounting_start_query_alt	- query for Accounting start packets 
 	#                               (alternate in case first query fails)
@@ -177,6 +179,18 @@ sql {
                 AcctOutputOctets = (('%{Acct-Output-Gigawords:-0}'::bigint << 32) + '%{Acct-Output-Octets:-0}'::bigint) \
 		WHERE AcctSessionId = '%{Acct-Session-Id}' AND UserName = '%{SQL-User-Name}' \
 		AND NASIPAddress= '%{NAS-IP-Address}' AND AcctStopTime IS NULL"
+
+	accounting_update_query_alt = "INSERT into ${acct_table1} \
+		(AcctSessionId, AcctUniqueId, UserName, Realm, NASIPAddress, NASPortId, NASPortType, AcctStartTime, \
+		AcctSessionTime, AcctAuthentic, AcctInputOctets, AcctOutputOctets, CalledStationId, CallingStationId, \
+		ServiceType, FramedProtocol, FramedIPAddress) \
+		values('%{Acct-Session-Id}', '%{Acct-Unique-Session-Id}', '%{SQL-User-Name}', '%{Realm}', '%{NAS-IP-Address}', \
+		'%{NAS-Port}', '%{NAS-Port-Type}', (now() -  '%{Acct-Delay-Time:-0}'::interval - '%{Acct-Session-Time:-0}'::interval), \
+		'%{Acct-Session-Time}', '%{Acct-Authentic}', \
+		(('%{Acct-Input-Gigawords:-0}'::bigint << 32) + '%{Acct-Input-Octets:-0}'::bigint), \
+		(('%{Acct-Output-Gigawords:-0}'::bigint << 32) + '%{Acct-Output-Octets:-0}'::bigint), '%{Called-Station-Id}', \
+		'%{Calling-Station-Id}', '%{Service-Type}', '%{Framed-Protocol}', \
+		NULLIF('%{Framed-IP-Address}', '')::inet)"
 
 	accounting_start_query = "INSERT into ${acct_table1} \
 		(AcctSessionId, AcctUniqueId, UserName, Realm, NASIPAddress, NASPortId, NASPortType, AcctStartTime, AcctAuthentic, \
