@@ -69,6 +69,8 @@ pgsql-voip {
 	#######################################################################
 	# accounting_onoff_query	- query for Accounting On/Off packets 
 	# accounting_update_query	- query for Accounting update packets 
+	# accounting_update_query_alt	- query for Accounting update packets 
+	#                               (alternate in case first query fails)
 	# accounting_start_query	- query for Accounting start packets 
 	# accounting_start_query_alt	- query for Accounting start packets 
 	#                               (alternate in case first query fails)
